--- a/Entrenamiento/Entrenamiento_YoloV8.ipynb
+++ b/Entrenamiento/Entrenamiento_YoloV8.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JorgeAnsotegui/TFM/blob/main/YoloV8/Entrenamiento_YoloV8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JorgeAnsotegui/TFM/blob/main/Entrenamiento/Entrenamiento_YoloV8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -106,7 +106,7 @@
         "outputId": "60ec619c-b33a-4cb9-fb58-4fbe4c1f8e2b",
         "collapsed": true
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
       "metadata": {
         "id": "eotMLol5O5G0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,6 +222,96 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import random\n",
+        "import cv2\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "\n",
+        "def load_random_image_and_labels(root_dir, dataset_type):\n",
+        "    image_dir = os.path.join(root_dir, dataset_type, 'images')\n",
+        "    label_dir = os.path.join(root_dir, dataset_type, 'labels')\n",
+        "\n",
+        "    images = [f for f in os.listdir(image_dir) if f.endswith('.jpg')]\n",
+        "    random_image_name = random.choice(images)\n",
+        "\n",
+        "    image_path = os.path.join(image_dir, random_image_name)\n",
+        "    label_path = os.path.join(label_dir, random_image_name.replace('.jpg', '.txt'))\n",
+        "\n",
+        "    image = cv2.imread(image_path)\n",
+        "    if image is None:\n",
+        "        raise FileNotFoundError(f\"No se pudo cargar la imagen: {image_path}\")\n",
+        "\n",
+        "    labels = []\n",
+        "    with open(label_path, 'r') as file:\n",
+        "        for line in file.readlines():\n",
+        "            parts = line.strip().split()\n",
+        "            class_id = int(parts[0])\n",
+        "            bbox = [float(x) for x in parts[1:5]]\n",
+        "            segmentation = [float(x) for x in parts[5:]]\n",
+        "            labels.append((class_id, bbox, segmentation))\n",
+        "\n",
+        "    return image, labels\n",
+        "\n",
+        "def draw_labels(image, labels):\n",
+        "    height, width = image.shape[:2]\n",
+        "\n",
+        "    for label in labels:\n",
+        "        class_id, bbox, segmentation = label\n",
+        "\n",
+        "        # Convert bounding box from relative to absolute coordinates\n",
+        "        x_center, y_center, w, h = bbox\n",
+        "        x_center *= width\n",
+        "        y_center *= height\n",
+        "        w *= width\n",
+        "        h *= height\n",
+        "\n",
+        "        x1 = int(x_center - w / 2)\n",
+        "        y1 = int(y_center - h / 2)\n",
+        "        x2 = int(x_center + w / 2)\n",
+        "        y2 = int(y_center + h / 2)\n",
+        "\n",
+        "        # Draw bounding box\n",
+        "        cv2.rectangle(image, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+        "\n",
+        "        # Draw segmentation points\n",
+        "        if segmentation:\n",
+        "            points = np.array(segmentation).reshape(-1, 2)\n",
+        "            points[:, 0] *= width\n",
+        "            points[:, 1] *= height\n",
+        "            points = points.astype(np.int32)\n",
+        "            cv2.polylines(image, [points], isClosed=True, color=(255, 0, 0), thickness=2)\n",
+        "\n",
+        "    return image\n",
+        "\n",
+        "def visualize_dataset(root_dir, dataset_types):\n",
+        "    for dataset_type in dataset_types:\n",
+        "        image, labels = load_random_image_and_labels(root_dir, dataset_type)\n",
+        "        image_with_labels = draw_labels(image, labels)\n",
+        "\n",
+        "        plt.figure(figsize=(10, 10))\n",
+        "        plt.title(f\"{dataset_type.capitalize()} - Imagen con Etiquetas\")\n",
+        "        plt.imshow(cv2.cvtColor(image_with_labels, cv2.COLOR_BGR2RGB))\n",
+        "        plt.axis('off')\n",
+        "        plt.show()\n",
+        "\n",
+        "\n",
+        "# Ruta raíz del dataset\n",
+        "root_dir = '/content/drive/MyDrive/TFM/Sin duplicados/Yolo&Coco/All_Data_Augmentation'\n",
+        "\n",
+        "# Visualizar aleatoriamente una imagen y etiquetas para train, valid y test\n",
+        "dataset_types = ['train',  'train',  'train',  'train',  'train',  'valid', 'test']\n",
+        "visualize_dataset(root_dir, dataset_types)\n"
+      ],
+      "metadata": {
+        "id": "KGuXwYNIaFqG"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -248,7 +338,7 @@
         },
         "outputId": "6d54c344-cdfe-4dca-e3cc-81a253ca9876"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +376,7 @@
       "metadata": {
         "id": "0pBNHHqscZ9p"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -311,7 +401,7 @@
         },
         "outputId": "be3cd02d-ad4a-4a4b-bb21-d049f6f2957c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +435,7 @@
       "metadata": {
         "id": "6-9DlovCf3e-"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +455,7 @@
       "metadata": {
         "id": "bvHk6gThrzXQ"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +470,7 @@
       "metadata": {
         "id": "b7JOR8RrpXtZ"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7457,7 +7547,7 @@
         },
         "outputId": "9a3fe193-d7bc-49d9-a840-fdcccd5cc973"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
