--- a/Entrenamiento/Entrenamiento_YoloV8_Local.ipynb
+++ b/Entrenamiento/Entrenamiento_YoloV8_Local.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "eotMLol5O5G0"
       },
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +65,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 6.74M/6.74M [00:00<00:00, 352MB/s]\n"
+            "100%|██████████| 6.74M/6.74M [00:00<00:00, 15.7MB/s]\n"
           ]
         }
       ],
@@ -751,7 +751,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.14"
     }
   },
   "nbformat": 4,
